# flask-trials

./: Makefile  README.md  build.sh  pyproject.toml  requirements.txt
flask_example/: db.py  flask_app.py  validator.py
flask_example/templates/: index.html
flask_example/templates/users/: delete.html  edit.html  form.html  index.html  new.html  show.html
