[tool.poetry]
name = "flask-trials"
version = "0.4"
description = "Education project for flask study framework"
authors = ["Evgeny Sokolov <sokolovsolod@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_example"}]


[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^20.1.0"
flask = "^2.3.2"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
